--- a/style.css
+++ b/style.css
@@ -84,13 +84,13 @@ body {
     font: normal normal 14px/20px Arial, Georgia, "Times New Roman", Times, serif;
 }
 h1 {
-    color: #39c6b9;
+    color: #000000;
     font-size: 24px;
     font-weight: lighter;
 }
 
 h2 {
-    color: #39c6b9;
+    color:#000000;
     font-size: 24px;
     font-weight: lighter;
 }
