--- a/style.css
+++ b/style.css
@@ -9,6 +9,14 @@ display:none;
  /* margin-top: 7px */
   display:block;
   margin: 0 auto;
+    background-color: #000000; 
+    border: none;
+    color: white;
+ 
+    text-align: center;
+    text-decoration: none;
+    
+    font-size: 16px;
 }
 
 #login-view {
