--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ h2 {
   z-index: 20;
 }
 .post {
-  background: #F5F5F5;
+  background: #000000;
   width: 100%;
   padding: 20px;
   float: left;
